<resources>
    <!-- App General -->
    <string name="app_name">RentingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_host_fragment_description">Navigation host fragment</string>
    <string name="toolbar_title">%s</string>
    <string name="toolbar_description">Main toolbar</string>

    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_rent_out">Rent Out</string>

    <!-- Login Page -->
    <string name="login_welcome">Welcome Back!</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">Sign Up</string>

    <!-- Register Page -->
    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Sign up to get started</string>
    <string name="register_upload_image">Upload Image</string>
    <string name="register_take_picture">Take Picture</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_phone_hint">Phone Number</string>
    <string name="register_button">Register</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="register_login">Login</string>

    <!-- Home Page -->
    <string name="home_blank_fragment">Home Page</string>
    <string name="home_items_renting">Items You\'re Renting</string>
    <string name="home_items_renting_out">Items You\'re Renting Out</string>

    <!-- Search Page -->
    <string name="search_blank_fragment">Search Page</string>

    <!-- Rent Out -->
    <string name="rent_out_blank_fragment">Rent out Page</string>
    <string name="rent_out_title">Rent Out Your Item</string>
    <string name="rent_out_item_name">Item Name</string>
    <string name="rent_out_description">Description</string>
    <string name="rent_out_price_per_day">Price per Day (€)</string>
    <string name="rent_out_category">Category</string>
    <string name="rent_out_condition">Condition</string>
    <string name="rent_out_images">Images</string>
    <string name="rent_out_add_image">Add Image</string>
    <string name="rent_out_location">Location</string>
    <string name="rent_out_submit">Submit</string>
    <string name="rent_out_category_prompt">Select a category</string>
    <string name="rent_out_condition_prompt">Select condition</string>
    <string name="rent_out_description_hint">Describe your item (features, specifications, rules, etc.)</string>
    <string name="rent_out_price_hint">Enter price per day</string>
    <string name="rent_out_name_hint">Enter item name</string>
    <string name="take_picture">Take Picture</string>
    <!-- Common -->
    <string name="appliance_image_description">Appliance image</string>
    <string name="owner_label">Owner:</string>
    <string name="app_logo_description">App Logo</string>
    <string name="profile_image_description">Profile Image</string>

    <!-- Details Page -->
    <string name="details_item_image">Item Image</string>
    <string name="details_rent_button">Rent</string>
    <string name="details_remove_listing">Remove Listing</string>
    <string name="details_price_per_day">€%.2f per day</string>
    <string name="details_total_price">Total Price: €%.2f</string>
    <string name="details_owner">Owner: %s</string>
    <string name="details_condition">Condition: %s</string>
    <string name="details_selected_dates">Selected dates: %s to %s</string>
    <string name="details_mark_unavailable">Mark as Unavailable</string>
    <string name="details_mark_available">Mark as Available</string>
    <string name="details_description_hint">Description</string>
    <string name="details_calendar_description">Select rental dates</string>
    <string name="details_status_unavailable">This item is currently unavailable</string>
    <string name="details_status_own_item">This is your item</string>
    <string name="details_status_already_rented">You are currently renting this item</string>
    <!-- Address registration -->
    <string name="enter_your_address">Enter Your Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="search">Search</string>
    <string name="register_my_address">Register my address</string>
    <!-- Item Appliance -->
    <string name="maximum_distance_0_km">Maximum Distance: 0 km</string>
    <string name="search_appliances">Search appliances</string>
    <string name="category">Category</string>
    <string name="available">Available</string>
    <string name="washing_machine">Washing Machine</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="_10_day">€10/day</string>
    <string name="a_high_quality_washing_machine_perfect_for_your_laundry_needs">A high-quality washing machine perfect for your laundry needs…</string>
    <string name="owner_name">Owner Name</string>
    <!-- Item Rented Appliance -->
    <string name="from_01_01_2024_to_15_01_2024">From: 01/01/2024 To: 15/01/2024</string>
    <string name="_5_days_remaining">5 days remaining</string>
    <string name="owner_Jerry_hense">Owner: Jerry Hens</string>
    <string name="item_name">Item Name</string>
    <!-- Item Rented Appliance -->
    <string name="nothing">nothing</string>
    <string name="rented_by_not_rented">Rented by: Not rented</string>
    <string name="Date_empty">From: -- To: --</string>
    <string name="not_currently_rented">Not currently rented</string>
    <string name="logout">Logout</string>
</resources>